Eliminación de llamadas a métodos deprecados